
 - Introduced a new instrument format database record for NovaSeqX,
   updated test data and one of the tests. 
 - Fixed visual representation for 'cBot 2' model:
     the instrument now appears in the visual listing,
     the instrument does not appear in the list of sequencing instruments
     when a new run is created.
 - Added basic provisions for supporting analysis of NovaSeqX data:
     dragen_analysis_path attribute, platform_NovaSeqX method.
 - Added visual representation for NovaSeqX.
 - Removed the GAII model from the 'Instrument Types' filter on the runs
   listing page.

release 92.8.1
 - update version of github actions

release 92.8.0
 - change CI runner from Ubuntu 18.04 to ubuntu-latest
 - add ad-hoc api usage example for run annotation and tagging

release 92.7.0
 - add primer bed path to gbs_plex find.

release 92.6.0
 - modified is_i5opposite for NovaSeq v1.5 single-end runs

release 92.5.0
 - Fixed instrument name check.
 - Fixed the problem in the script that generates the Illumina instruments
   uptime report. A few month ago the lab stopped recording the washing
   cycle. As a consequence, statuses of some instruments do not get updated
   for many months. The instruments with no status within the report period
   were excluded from the report.
 - Simplify directory view for Tileviz data.

release 92.4.0
 - Staging area daemon - when the folder name is not in the database,
   prior to updating the database check that for the given run id:
      1. the current run status is "run pending",
      2. the instrument name is consistent between the database record
         and the RunInfo.xml file.
 - Switched the default st::api::lims driver from xml to samplesheet.
   Fixed tests, which implicitly relied on the xml driver being the default.
   Some tests used the default driver type. For those tests either test
   samplesheets were generated and used as a source of LIMS data or the
   driver type was explicitly set as 'xml'.